修改交易评价页面到首页的问题以及修改actionsheet的样式

--- a/kankan/pages/main/products/product_login.html
+++ b/kankan/pages/main/products/product_login.html
@@ -119,30 +119,30 @@
 				<input type="hidden" name="commstautes" id="commstautes" value="" />
 				<div id="photoLeft" class="mui-popover mui-popover-action mui-popover-bottom">
 					<ul class="mui-table-view tickimgbox">
-						<li class="mui-table-view-cell">
+						<li style="display: block;" class="mui-table-view-cell">
 							<a id="chooseImage" style="color: #9C9C9C" disabled="true"></a>
 						</li>
-						<li class="mui-table-view-cell">
+						<li style="display: block;" class="mui-table-view-cell">
 							<a id="fromChoose" onclick="galleryImg()" style="color: #007aff"></a>
 						</li>
 					</ul>
 					<ul class="mui-table-view tickimgbox">
-						<li class="mui-table-view-cell">
+						<li style="display: block;" class="mui-table-view-cell">
 							<a href="#photoLeft" style="color: #007aff"></a>
 						</li>
 					</ul>
 		        </div>
 			    <div id="photoRight" class="mui-popover mui-popover-action mui-popover-bottom">
 					<ul class="mui-table-view tickimgbox">
-						<li class="mui-table-view-cell">
+						<li style="display: block;" class="mui-table-view-cell">
 							<a id="comdity_takepic" style="color: #9C9C9C" disabled="true"></a>
 						</li>
-						<li class="mui-table-view-cell">
+						<li  style="display: block;" class="mui-table-view-cell">
 							<a id="tackpicture" onclick="getImage()" style="color: #007aff"></a>
 						</li>
 					</ul>
 					<ul class="mui-table-view tickimgbox">
-						<li class="mui-table-view-cell">
+						<li style="display: block;" class="mui-table-view-cell">
 							<a href="#photoRight" style="color: #007aff"></a>
 						</li>
 					</ul>
