--- a/kankan/pages/main/user/user.html
+++ b/kankan/pages/main/user/user.html
@@ -273,18 +273,18 @@
 	        <!--click user information-->
 	        <div id="userEdit" class="bottomStyle mui-popover mui-popover-action mui-popover-bottom">				
 	        	<ul class="mui-table-view tickimgbox">					
-	        		<li class="mui-table-view-cell">						
+	        		<li style="display: block;" class="mui-table-view-cell">						
 	        			<a id="changeImage" style="color: #9C9C9C" disabled="true"></a >					
 	        		</li>					
-	        		<li class="mui-table-view-cell">						
+	        		<li style="display: block;" class="mui-table-view-cell">						
 	        			<a id="takePhoto" onclick="getImage()"></a >					
 	        		</li>					
-	        		<li class="mui-table-view-cell">						
+	        		<li style="display: block;" class="mui-table-view-cell">						
 	        			<a id="chooseFrom" onclick="galleryImg()"></a >					
 	        		</li>				
 	        	</ul>				
 	        	<ul class="mui-table-view tickimgbox">
-	        		<li class="mui-table-view-cell">						
+	        		<li style="display: block;" class="mui-table-view-cell">						
 	        			<a href="#userEdit"></a >
 	        		</li>				
 	        	</ul>		    
