--- a/kankan/pages/main/user/useredite.html
+++ b/kankan/pages/main/user/useredite.html
@@ -53,6 +53,24 @@
 						</div>
 	    	     </div>
 					<button type="button" class="mui-btn mui-btn-red ka_usersubmitbtn lang" data-locale="user_buttonsure" onclick="userinfosubmit()"></button>
+				    <div id="userEdit" class="mui-popover mui-popover-action mui-popover-bottom">				
+			        	<ul style="margin: 8px 11px 8px 2px;" class="mui-table-view">					
+			        		<li class="mui-table-view-cell">						
+			        			<a id="changeImage" style="color: #9C9C9C" disabled="true"></a >					
+			        		</li>
+			        		<li class="mui-table-view-cell">						
+			        			<a id="takePhoto" onclick="getImage()"></a >					
+			        		</li>					
+			        		<li class="mui-table-view-cell">						
+			        			<a id="chooseFrom" onclick="galleryImg()"></a >					
+			        		</li>				
+			        	</ul>				
+			        	<ul style="margin: 8px 11px 8px 2px;" class="mui-table-view">
+			        		<li class="mui-table-view-cell">						
+			        			<a href="#userEdit"></a >
+			        		</li>				
+			        	</ul>		    
+	                </div>
 				</div>
 			</form>
 		</div>
@@ -245,7 +263,8 @@
 			//change head image
 		mui(".editeimg").on("tap", ".headimg", function(e) {
 			if(mui.os.plus){
-				var a = [{
+				mui("#userEdit").popover("toggle");
+				/*var a = [{
 					title: TextMessage.tackpicture
 				}, {
 					title: TextMessage.gallerychoose
@@ -267,7 +286,8 @@
 						default:
 							break
 					}
-				})	
+				})	*/
+				
 			}
 			
 		});
@@ -296,6 +316,7 @@
 				});
 		}
 		function getImage() {
+			mui("#userEdit").popover("hide");
 			var c = plus.camera.getCamera();
 			c.captureImage(function(e) {
 				plus.io.resolveLocalFileSystemURL(e, function(entry) {
@@ -315,6 +336,7 @@
 		}
 		
 		function galleryImg() {
+			mui("#userEdit").popover("hide");
 			plus.gallery.pick(function(a) {
 				plus.io.resolveLocalFileSystemURL(a, function(entry) {
 					var localURL2 = entry.toLocalURL();
@@ -382,6 +404,10 @@
 				task.start();
 			}
 		}
+		$('#changeImage').text(TextMessage.edite_headimage);
+		$('#takePhoto').text(TextMessage.tackpicture);
+		$('#chooseFrom').text(TextMessage.gallerychoose);
+		$("[href='#userEdit']").html("<b>" + TextMessage.cancel + "</b>");
 		</script>
 	</body>
 
