--- a/kankan/pages/transaction/transevaluate.html
+++ b/kankan/pages/transaction/transevaluate.html
@@ -101,21 +101,9 @@
 
 			function gotoMain(){
 				mui.plusReady(function() {
-					/*var preViewTrans = plus.webview.getWebviewById('transaction');
-					plus.webview.close(preViewTrans);
-					var requestView = plus.webview.getWebviewById('requestlist');
-					plus.webview.close(requestView);
-					var requestlistView = plus.webview.getWebviewById('requestlist');
-					plus.webview.close(requestlistView);
-					//var mainpage = plus.webview.getWebviewById('home');
-					mui.back();*/
-					mui.openWindow({
-						id: "requestlist",
-						url: "../main/products/requestlist.html"
-					});
-					mui.fire(mainpage, 'refresh', {
-						refresh: "canRefresh"
-					});
+					var mainPage = plus.webview.getLaunchWebview();
+					mui.fire(mainPage,'gohome');
+       				mainPage.show();
 				});
 			}
 			function evaluate_submit() {
