--- a/kankan/pages/main/home.html
+++ b/kankan/pages/main/home.html
@@ -140,35 +140,31 @@
 			<div id="slider" class="mui-slider mui-fullscreen">
 				<div id="sliderSegmentedControl" class="mui-scroll-wrapper mui-slider-indicator mui-segmented-control mui-segmented-control-inverted">
 					<div class="mui-scroll">
-						<a class="mui-control-item mui-active lang" data-locale="category_top_1" href="#item1mobile" data-wid="tab-top-subpage-1" data-cid="0">
+						<a class="mui-control-item mui-active lang" data-locale="category_top_1" data-wid="tab-top-subpage-1" data-cid="0">
 						</a>
-						<!--
-						<a class="mui-control-item lang" data-locale="category_top_2" href="#item2mobile" data-wid="tab-top-subpage-2" data-cid="-1">
+						<a class="mui-control-item lang" data-locale="category_top_2" data-wid="tab-top-subpage-2" data-cid="3">
 						</a>
-						-->
-						<a class="mui-control-item lang" data-locale="category_top_3" href="#item3mobile" data-wid="tab-top-subpage-3" data-cid="3">
+						<a class="mui-control-item lang" data-locale="category_top_3" data-wid="tab-top-subpage-3" data-cid="33">
 						</a>
-						<a class="mui-control-item lang" data-locale="category_top_4" href="#item4mobile" data-wid="tab-top-subpage-4" data-cid="33">
+						<a class="mui-control-item lang" data-locale="category_top_4" data-wid="tab-top-subpage-4" data-cid="40">
 						</a>
-						<a class="mui-control-item lang" data-locale="category_top_5" href="#item5mobile" data-wid="tab-top-subpage-5" data-cid="40">
+						<a class="mui-control-item lang" data-locale="category_top_5" data-wid="tab-top-subpage-5" data-cid="41">
 						</a>
-						<a class="mui-control-item lang" data-locale="category_top_6" href="#item6mobile" data-wid="tab-top-subpage-6" data-cid="41">
+						<a class="mui-control-item lang" data-locale="category_top_6" data-wid="tab-top-subpage-6" data-cid="42">
 						</a>
-						<a class="mui-control-item lang" data-locale="category_top_7" href="#item7mobile" data-wid="tab-top-subpage-7" data-cid="42">
+						<a class="mui-control-item lang" data-locale="category_top_7" data-wid="tab-top-subpage-7" data-cid="6">
 						</a>
-						<a class="mui-control-item lang" data-locale="category_top_8" href="#item8mobile" data-wid="tab-top-subpage-8" data-cid="6">
+						<a class="mui-control-item lang" data-locale="category_top_8" data-wid="tab-top-subpage-8" data-cid="44">
 						</a>
-						<a class="mui-control-item lang" data-locale="category_top_9" href="#item9mobile" data-wid="tab-top-subpage-9" data-cid="44">
+						<a class="mui-control-item lang" data-locale="category_top_9" data-wid="tab-top-subpage-9" data-cid="45">
 						</a>
-						<a class="mui-control-item lang" data-locale="category_top_10" href="#item10mobile" data-wid="tab-top-subpage-10" data-cid="45">
+						<a class="mui-control-item lang" data-locale="category_top_10" data-wid="tab-top-subpage-10" data-cid="46">
 						</a>
-						<a class="mui-control-item lang" data-locale="category_top_11" href="#item11mobile" data-wid="tab-top-subpage-11" data-cid="46">
+						<a class="mui-control-item lang" data-locale="category_top_11" data-wid="tab-top-subpage-11" data-cid="2">
 						</a>
-						<a class="mui-control-item lang" data-locale="category_top_12" href="#item12mobile" data-wid="tab-top-subpage-12" data-cid="2">
+						<a class="mui-control-item lang" data-locale="category_top_12" data-wid="tab-top-subpage-12" data-cid="48">
 						</a>
-						<a class="mui-control-item lang" data-locale="category_top_13" href="#item13mobile" data-wid="tab-top-subpage-13" data-cid="48">
-						</a>
-						<a class="mui-control-item lang" data-locale="category_top_14" href="#item14mobile" data-wid="tab-top-subpage-14" data-cid="32">
+						<a class="mui-control-item lang" data-locale="category_top_13" data-wid="tab-top-subpage-13" data-cid="32">
 						</a>
 					</div>
 				</div>
@@ -287,13 +283,6 @@
 						url: "category/tab-top-subpage-13.html",
 						extras: {}
 					}
-					/**
-					, {
-						id: "tab-top-subpage-14",
-						url: "category/tab-top-subpage-14.html",
-						extras: {}
-					}
-					**/
 					],
 					onChange: function(obj) {
 						console.log("onChange callback");
