检索关键字长度限制

--- a/kankan/pages/main/search.html
+++ b/kankan/pages/main/search.html
@@ -20,7 +20,7 @@
 	<body>
 		<header class="mui-bar mui-bar-nav">
 			<a class="mui-action-back mui-icon mui-icon-left-nav"></a>
-			<input id="search" type="text" class="mui-input-clear" />
+			<input id="search" type="text" class="mui-input-clear" maxlength="40"/>
 			<a class="mui-icon mui-icon-search mui-pull-right"></a>
 		</header>
 	</body>
