选择器式样改修，交易成功可多次评价的问题修复

--- a/kankan/pages/transaction/transevaluate.html
+++ b/kankan/pages/transaction/transevaluate.html
@@ -101,6 +101,8 @@
 
 			function gotoMain(){
 				mui.plusReady(function() {
+					var transactionView = plus.webview.getWebviewById('transaction');
+					plus.webview.close(transactionView);
 					var mainPage = plus.webview.getLaunchWebview();
 					mui.fire(mainPage,'gohome');
        				mainPage.show();
