申诉和举报字段限制

--- a/kankan/pages/main/products/detail.html
+++ b/kankan/pages/main/products/detail.html
@@ -462,10 +462,10 @@
 				Repository.Commodity.reportCommodity(paramport, {
 					ok: function(data) {
 						Log.d("success");
-						mui.toast(TextMessage.comodityreport_success, {
-							duration: 'long',
-							type: 'div'
-						});
+//						mui.toast(TextMessage.comodityreport_success, {
+//							duration: 'long',
+//							type: 'div'
+//						});
 						mui.openWindow({
 							id: 'complaint',
 							url: "complaint.html",
