--- a/kankan/pages/setting/question.html
+++ b/kankan/pages/setting/question.html
@@ -29,7 +29,7 @@
 				<div style="padding:15px 15px;"><span style="color:red">*</span><span class="lang" data-locale="musttext"></span></div>
 				<h5 style="padding-left:15px"><span style="color:red">*</span><span class="lang" data-locale="nametext"></span></h5>
     			<div class="mui-input-row" style="text-align:center;margin-bottom:10px;">
-					<input type="text" style="background:#FFFFFF;width:85%;" class="mui-input-clear lang" data-locale="nametext" name="full_name" id="full_name">
+					<input type="text" style="background:#FFFFFF;width:85%;" class="mui-input-clear lang" data-locale="nametext" name="full_name" id="full_name" max="10">
 				</div>
 				<h5 style="padding-left:15px"><span style="color:red">*</span>Email</h5>
     			<div class="mui-input-row" style="text-align:center;">
@@ -37,7 +37,7 @@
 				</div>
 				<h5 style="padding-left:15px"><span style="color:red">*</span><span class="lang" data-locale="contenttext"></span></h5>
     			<div class="mui-input-row" style="text-align:center;">
-					<textarea style="background:#FFFFFF;width:85%;" rows="5"  id="contents" name="contents"></textarea>
+					<textarea style="background:#FFFFFF;width:85%;" rows="5"  id="contents" name="contents" maxlength="1000"></textarea>
     			</div>
     			<h5 class="lang" data-locale="upimgtext" style="padding-left:15px;"></h5>
     			<div class="ka_prologbox0 z_photo" style="width: 85%; height:auto; margin-top: -0.2em;">
