物流入口注释

--- a/kankan/pages/main/main.html
+++ b/kankan/pages/main/main.html
@@ -24,18 +24,18 @@
 				<span class="mui-icon mui-icon-home"></span>
 				<span class="mui-tab-label lang" data-locale="tab_1"></span>
 			</a>
-			<a class="mui-tab-item" href="products/request.html">
-				<span class="mui-icon mui-icon-paperplane"></span>
-				<span class="mui-tab-label lang" data-locale="tab_5"></span>
-			</a>
 			<a class="mui-tab-item" href="products/product_login.html">
 				<span class="mui-icon mui-icon-camera"></span>
 				<span class="mui-tab-label lang" data-locale="tab_2"></span>
 			</a>
-			<a class="mui-tab-item" href="logisticslist.html">
+			<a class="mui-tab-item" href="products/request.html">
+				<span class="mui-icon mui-icon-paperplane"></span>
+				<span class="mui-tab-label lang" data-locale="tab_5"></span>
+			</a>
+			<!--<a class="mui-tab-item" href="logisticslist.html">
 				<span class="mui-icon iconfont icon-wuliu"></span>
 				<span class="mui-tab-label lang" data-locale="tab_4"></span>
-			</a>
+			</a>-->
 		</nav>
 		<script type="text/javascript" src="../../js/mui.min.js"></script>
 		<script type="text/javascript" src="../../js/jquery-3.2.0.min.js"></script>
@@ -44,7 +44,7 @@
 		<script type="text/javascript" charset="utf-8">
 			//mui初始化
 			mui.init();
-			var subpages = ['home.html', 'products/request.html', 'products/product_login.html', 'logisticslist.html'];
+			var subpages = ['home.html', 'products/product_login.html','products/request.html'];
 			var subpage_style = {
 				top: '0px',
 				bottom: '51px'
