--- a/kankan/pages/transaction/transaction2.html
+++ b/kankan/pages/transaction/transaction2.html
@@ -149,11 +149,11 @@
 										<font size="2" class="lang" color="999999" data-locale="trans_criterion" vertical-align="middle"></font>
 									</a>
 								</div>
-								<a href="../main/logisticslist2.html" class="logistica">
+								<!--<a href="../main/logisticslist2.html" class="logistica">
 									<div class="tran-distribution-call">
 										<font size="2" class="lang" color="#FFFFF" data-locale="trans_logistic" vertical-align="middle"></font>
 									</div>
-								</a>
+								</a>-->
 							</li>
 						</ul>
 						<ul id="msgArea" class="tran-chat">
