--- a/kankan/pages/main/search.html
+++ b/kankan/pages/main/search.html
@@ -31,10 +31,9 @@
 	<script type="text/javascript">
 		(function(mui, doc) {
 			var keyword = "";
-			var wid = "";
 			mui.init({
 				beforeback: function() {
-					var page = plus.webview.getWebviewById("pullrefresh_sub_" + wid + ".html");
+					var page = plus.webview.getWebviewById("pullrefresh_sub");
 					mui.fire(page, 'search', {
 						keyword: keyword
 					});
@@ -42,8 +41,6 @@
 				}
 			});
 			mui.plusReady(function() {
-				wid = plus.webview.currentWebview().wid;
-				console.log("wid is " + wid);
 				$('.mui-icon-search').click(function() {
 					keyword = $('#search').val().trim();
 					Log.i("keyword is " + keyword);
