修复用户被冻结之后没办法申诉的问题

--- a/kankan/pages/login/login.html
+++ b/kankan/pages/login/login.html
@@ -222,6 +222,9 @@
 														mui.openWindow({
 															id: "question",
 															url: "../setting/question.html",
+															extras : {
+																email : ""
+															},
 															waiting: {
 																autoShow: false
 															},
@@ -320,6 +323,9 @@
 											mui.openWindow({
 												id: "question",
 												url: "../setting/question.html",
+												extras : {
+													email : doc.getElementById('email').value.trim()
+												},
 												waiting: {
 													autoShow: false
 												},
