对应问题： 1.将检索关键字进行实体化转换。 2.首页商品名显示式样调整。

--- a/kankan/pages/main/search.html
+++ b/kankan/pages/main/search.html
@@ -42,7 +42,7 @@
 			});
 			mui.plusReady(function() {
 				$('.mui-icon-search').click(function() {
-					keyword = $('#search').val().trim();
+					keyword = HTMLEncode($('#search').val().trim());
 					Log.i("keyword is " + keyword);
 					setTimeout(function() {
 						mui.back();
